--- a/manga_db/webGUI/templates/layout.html
+++ b/manga_db/webGUI/templates/layout.html
@@ -46,7 +46,7 @@
         <i class="fa fa-search" id="search-icon"></i>
         <input type="text" class="searchbar" name ="q" placeholder="Search" value"{{ search_field }}"/>
         <input type="hidden" value="{{ order }}" name="order" />
-        <input type="hidden" value="{{ sort_col }}" name="order" />
+        <input type="hidden" value="{{ sort_col }}" name="sort_col" />
     </form>
     <ul class="navbar-nav mr-auto" id="search-options">
         <li class="nav-item" style="position:relative"> {# relative so dropdown is at correct loc #}
